--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,44 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
+  <ion-toolbar color="dark">
+    <ion-title class="ion-text-center">
+      AGENDA 
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-list>
+    <ion-item *ngIf="consultas.length < 1">
+      <ion-label>Não há tarefas</ion-label> 
+    </ion-item>
+    <ion-item-sliding *ngFor="let consulta of consultas">
+      <ion-item (click)="abrirAcoes(consulta)">
+        <ion-label *ngIf='!consulta.feito'>{{consulta.nome}}</ion-label>
+        <ion-label *ngIf='consulta.feito'><del>{{consulta.nome}}</del></ion-label>
+        <ion-icon *ngIf='!consulta.feito' slot="start" name="radio-button-off" color="dark"></ion-icon>
+        <ion-icon *ngIf='consulta.feito' slot="start" name="checkmark-circle" color="success"></ion-icon>
+     
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+      <ion-list>
+        <ion-label *ngIf='!consulta.mostrar'></ion-label>
+        <ion-label>Medico: {{consulta.medicos}}</ion-label> 
+        <br>
+        <ion-label>Data: {{consulta.datas}}</ion-label>
+        <br>
+        <ion-label>Hora: {{consulta.horas}}</ion-label>
+
+      </ion-list>
+    </ion-item>
+    
+    <ion-item-options side="start">
+      <ion-item-option color="danger" (click)="excluir(consulta)">Excluir</ion-item-option>
+    </ion-item-options>
+
+    </ion-item-sliding>
+  </ion-list>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button color="dark" (click)="adicionarConsulta()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
